examples/test/testpolicy3120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3120
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key0: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value9
          key13: value18
          key34: value14
      podSelector:
        matchLabels:
          key42: value25
